--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "joi": "^17.12.1",
     "moment-timezone": "^0.5.45",
     "multer": "^1.4.5-lts.1"
   },
